improved    better paths    better jade doc management    more pages    decision for nodeIO

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,58 +1,5 @@
-extends layout
-block content	
-	div.container
-		div.row
-			#twitt.span8
-				img.img-polaroid(src="http://placehold.it/200x100")
-			#Login.span4
-				form.form-inline(method="post")
-					input.input-small(type="text", name="username", placeholder="Username")
-					b 
-					input.input-small(type="password", name="password", placeholder="Password")
-					b 
-					button.btn.btn-primary(type="submit")
-						i.icon-home.icon-white
-						b  Sign in
-				loggedvariable = 0
-				case loggedvariable
-					when 1
-						p you have no friends
-					when 0
-						p youre not logged
-					
-		hr
+extends topbar
+block content
+		div.span4
+		h2.span4 Welcome to Twittcher
 			
-		div.row
-			div.span3
-				img.img-polaroid(src="http://placehold.it/200x250")
-				hr
-				table.table.table-striped
-					tbody	
-						tr
-							td Nickname:
-							td Pika
-						tr
-							td Sex:
-							td Male
-						tr
-							td Age
-							td 23
-			div.span9
-				ul.nav-tabs.nav(id="myTab")
-					li.active
-						a(href="/wall") Wall
-					li
-						a(href="/search") Search
-					li
-						a(href="/profiles") Profiles				
-				
-				div
-					extends layout
-					block wall
-						
-		div.row
-			div.span12.red
-				div Copyright © Twittcher #{+new Date().getFullYear()} 
-				a(href='/page?name=about') About 
-				| |  
-				a(href='/page?name=contact') Contact Us
