--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,13 +1,13 @@
 doctype 5
 html
-  head
-    title= title
-    link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/pika.css')
-    script(src='/javascripts/jq.js')
-    script(src='/bootstrap/js/bootstrap.min.js')
-    script(src='/javascripts/pika.js')
-  body
-    block content
+	head
+		title= title
+		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
+		link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/pika.css')
+		script(src='/javascripts/jq.js')
+		script(src='/bootstrap/js/bootstrap.min.js')
+		script(src='/javascripts/pika.js')
+	body
+		block header
