--- a/views/profil.jade
+++ b/views/profil.jade
@@ -18,11 +18,11 @@ block content
 			div.span9
 				ul.nav-tabs.nav(id="myTab")
 					li.active
-						a(href="/wall") Wall
+						a(href="/profil/username/wall") Wall
 					li
-						a(href="./search") Search
+						a(href="/profil/username/search") Search
 					li
-						a(href="username/profiles") Profiles				
+						a(href="/profil/username/profiles") Profiles				
 				
 				div
 					block wall
