--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,51 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0px;
+  font-family: 'Titillium Web', sans-serif;
+  background-color: #f5f5f5;
 }
 a {
   color: #00b7ff;
+}
+hr {
+  color: #000;
+  background-color: #000;
+  height: 1px;
+}
+textarea {
+  position: relative;
+  resize: none;
+}
+.topBar {
+  opacity: 0.8;
+}
+.wPost {
+  position: relative;
+  height: auto;
+  width: auto;
+  margin: 2%;
+  padding: 2%;
+  border-radius: 3px;
+  background-color: #eee;
+  padding-top: 2%;
+}
+.btnX {
+  position: relative;
+  height: 40px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.red {
+  color: #f00;
+  background-color: #00f;
+}
+.left {
+  margin-left: 5%;
+}
+.bla {
+  margin-top: 180px;
+}
+.loginBar {
+  margin-top: 24px;
 }
