--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends topbar
 block content
-		div.span4
-		h2.span4 Welcome to Twittcher
-			
+	div.row
+		div.span2
+		div.span6
+			h1.titW This is Twittcher !
+			br
+			p.titW Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
