--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,12 +2,13 @@ doctype 5
 html
 	head
 		title= title
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Titillium+Web&subset=latin,latin-ext', type='text/css')
 		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
-		link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
+		link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css', media="screen")
 		link(rel='stylesheet', href='/stylesheets/style.css')
-		link(rel='stylesheet', href='/stylesheets/pika.css')
 		script(src='/javascripts/jq.js')
 		script(src='/bootstrap/js/bootstrap.min.js')
 		script(src='/javascripts/pika.js')
-	body
+	body(data-twttr-rendered="true")
 		block header
