After Many Problems with server/client communication so i switched to ajax
changes: many things changed between server/client communication

--- a/views/profil.jade
+++ b/views/profil.jade
@@ -18,7 +18,7 @@ block content
 			div.span9
 				ul.nav-tabs.nav(id="myTab")
 					li.active
-						a(href="/profil/username/wall") Wall
+						a(onclick="ajxProfil()") Wall
 					li
 						a(href="/profil/username/search") Search
 					li
