--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,11 @@ block content
 	div.row
 		div.span2
 		div.span6
+			
 			h1.titW This is Twittcher !
 			br
 			p.titW Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+			a.btn.btn-primary.btn-large(type="button", href="/registration")
+										i.icon-home.icon-white
+										b  Register
+			
