Posts Work now on /profil/username

--- a/views/profil.jade
+++ b/views/profil.jade
@@ -18,11 +18,11 @@ block content
 			div.span9
 				ul.nav-tabs.nav(id="myTab")
 					li.active
-						a(onclick="ajxProfil()") Wall
+						a(onclick="ajxWall()") Wall
 					li
 						a(href="/profil/username/search") Search
 					li
 						a(href="/profil/username/profiles") Profiles				
 				
-				div
+				#Content
 					block wall
