--- a/views/profil.jade
+++ b/views/profil.jade
@@ -18,7 +18,7 @@ block content
 			div.span9
 				ul.nav-tabs.nav(id="myTab")
 					li.active
-						a(onclick="ajxWall()") Wall
+						a(href="/profil/username/wall") Wall
 					li
 						a(href="/profil/username/search") Search
 					li
