finallized today   routing ended   logo created   website uploaded on   http://twittcher.herokuapp.com/   (doesnt run properly (procfile)   at parents of my girlfriend

--- a/views/profil.jade
+++ b/views/profil.jade
@@ -18,11 +18,11 @@ block content
 			div.span9
 				ul.nav-tabs.nav(id="myTab")
 					li.active
-						a(href="/profil/username/wall") Wall
+						a(href="/profil/#{username}/wall") Wall
 					li
-						a(href="/profil/username/search") Search
+						a(href="/profil/#{username}/search") Search
 					li
-						a(href="/profil/username/profiles") Profiles				
+						a(href="/profil/#{username}/profiles") Profiles				
 				
 				#Content
 					block wall
