--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -49,6 +49,14 @@ textarea
 	border-bottom-left-radius: 5px
 	border-top-right-radius: 0px
 	border-bottom-right-radius: 5px
+	
+.modal-body 
+	max-height: 800px
+
+
+p.white
+	color: #ccc
+
 
 
 //// Tests
